--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "firebase-admin": "^8.7.0",
     "http-errors": "~1.6.3",
+    "iconv-lite": "^0.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "r-script": "0.0.4"
