--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "cheerio-eq": "^1.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "iconv-lite": "^0.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "r-script": "0.0.4"
+    "r-script": "0.0.4",
+    "synonyms": "^1.0.1"
   }
 }
